// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should not render any field if component type is not matched 1`] = `
.c5 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c3 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover {
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c3:disabled .sc-AxiKw * {
  fill: #dfe4e9;
}

.c3:not(:disabled) {
  color: #ffffff;
}

.c3:not(:disabled) .sc-AxiKw * {
  fill: #ffffff;
}

.c3:not(:disabled):not(:hover) {
  background: #005AEE;
}

.c3:not(:disabled):hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c3 .sc-AxiKw + .c4 {
  margin-left: 0.8rem;
}

.c3 .c4 + .sc-AxiKw {
  margin-left: 0.8rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 > * + * {
  margin-left: 1.6rem;
}

.c1 {
  grid-column: 1/-1;
}

.c1 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: inline-grid;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <button
        class="c3"
        color="default"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c4 c5"
        >
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should render properly with initial state 1`] = `
.c28 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c28 * {
  fill-opacity: 1;
  fill: #607890;
}

.c62 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.0rem;
  cursor: pointer;
}

.c62 * {
  fill-opacity: 1;
  fill: #607890;
}

.c63 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: pointer;
}

.c63 * {
  fill-opacity: 1;
  fill: #607890;
}

.c18 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c21 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c65 {
  margin: 0;
  color: inherit;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  line-height: 2.4rem;
}

.c73 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c73 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c73:hover {
  cursor: pointer;
}

.c73:focus {
  outline: none;
}

.c73:disabled {
  cursor: not-allowed;
}

.c73:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c73:disabled .c27 * {
  fill: #dfe4e9;
}

.c73:not(:disabled) {
  color: #ffffff;
}

.c73:not(:disabled) .c27 * {
  fill: #ffffff;
}

.c73:not(:disabled):not(:hover) {
  background: #005AEE;
}

.c73:not(:disabled):hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c73 .c27 + .c17 {
  margin-left: 0.8rem;
}

.c73 .c17 + .c27 {
  margin-left: 0.8rem;
}

.c13 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c13::after {
  color: red;
  content: ' *';
}

.c41 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c14 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c19 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c12 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c12 .sc-fzoyAV {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c43 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c43 .sc-fzoyAV {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c25 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-color: #005AEE;
  background-color: #005AEE;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 .c27 * {
  fill: #ffffff;
}

.c30 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
  border-color: #13181D;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c23 * {
  cursor: pointer;
}

.c23 .c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c23 .c27 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c23:hover .c24 {
  border-color: #1A6BF0;
  background-color: #1A6BF0;
}

.c29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c29 * {
  cursor: pointer;
}

.c29 .c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c29 .c27 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c29:hover .c24 {
  border-color: #1A6BF0;
}

.c71 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c71 * {
  cursor: pointer;
}

.c71 .c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c71 .c27 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
}

.c71:hover .c24 {
  border-color: #1A6BF0;
  background-color: #1A6BF0;
}

.c26 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c26:focus {
  outline: none;
}

.c20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c20 > :first-child {
  margin-bottom: 0.9rem;
}

.c20 > .c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: #13181D;
}

.c22 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c61 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: default;
  border: 1px solid #F38037;
  background-color: #F38037;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c61:focus {
  outline: none;
}

.c61 .c27 * {
  fill: #ffffff;
}

.c61 .c17 + .c27 {
  cursor: pointer;
  margin-left: 10px;
}

.c8 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c8::after {
  content: ' *';
}

.c58 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  padding: 0 1.6rem;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c4 .c7 {
  color: #566c82;
}

.c4 .sc-fzpmMD,
.c4 .c57 {
  color: #566c82;
}

.c4 .sc-fzpmMD *,
.c4 .c57 * {
  fill: #566c82;
}

.c4 ~ .sc-fzoNJl {
  color: #566c82;
}

.c4::after {
  content: '';
  width: 100%;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #566c82;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c4:hover::after,
.c4:focus-within::after {
  height: 0.2rem;
}

.c4:focus-within,
.c4:focus-within:hover {
  border-color: #005AEE;
  background-color: #e6effd;
}

.c4:focus-within::after,
.c4:focus-within:hover::after {
  background-color: #005AEE;
}

.c4:focus-within .c7,
.c4:focus-within:hover .c7 {
  color: #005AEE;
}

.c4:focus-within .sc-fzpmMD,
.c4:focus-within:hover .sc-fzpmMD,
.c4:focus-within .c57,
.c4:focus-within:hover .c57 {
  color: #005AEE;
}

.c4:focus-within .sc-fzpmMD *,
.c4:focus-within:hover .sc-fzpmMD *,
.c4:focus-within .c57 *,
.c4:focus-within:hover .c57 * {
  fill: #005AEE;
}

.c4:focus-within input::-webkit-input-placeholder,
.c4:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input::-moz-placeholder,
.c4:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input:-ms-input-placeholder,
.c4:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c4:focus-within input::placeholder,
.c4:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 20rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c56 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c6 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c6:focus {
  outline: none;
}

.c6:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c6:focus::-moz-placeholder {
  opacity: 1;
}

.c6:focus:-ms-input-placeholder {
  opacity: 1;
}

.c6:focus::placeholder {
  opacity: 1;
}

.c6::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c6:not(:placeholder-shown) + .c7,
.c6:focus + .c7 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c55 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c55 .c2 {
  margin: 0;
  caret-color: transparent;
}

.c55 .c2 label {
  pointer-events: none;
}

.c55 .c2 div,
.c55 .c2 input,
.c55 .c2 label {
  cursor: pointer;
}

.c55 .c2 .c57 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c55 .c2 .c57 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c55 .c2:not(:focus-within):hover .c57 * {
  fill: #13181D;
}

.c42 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c42 .sc-fzoYkl {
  top: calc(100% + 5px);
  left: 0%;
}

.c59 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c59 .sc-fzoYkl {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c44 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: 100%;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c44.c44.c44 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c44:focus-within {
  border-color: #012040;
}

.c44 > * {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
}

.c45 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c45::-webkit-input-placeholder {
  color: #98A7B7;
}

.c45::-moz-placeholder {
  color: #98A7B7;
}

.c45:-ms-input-placeholder {
  color: #98A7B7;
}

.c45::placeholder {
  color: #98A7B7;
}

.c45::-webkit-file-upload-button {
  visibility: hidden;
}

.c46 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
}

.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c54 {
  box-sizing: border-box;
  position: absolute;
  bottom: unset;
  left: 0;
  top: unset;
  right: unset;
}

.c50 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c51 {
  border: 0;
  padding: 0 44px;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c51::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c51::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c51:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c48 {
  box-sizing: border-box;
  position: relative;
}

.c53 {
  color: #BCBEC0;
  opacity: 1;
}

.c49 {
  display: grid;
  grid-template-columns: 194px 39px 194px;
  grid-template-rows: unset;
  background: transparent;
  border: 0;
  border-radius: 0;
}

.c47 > div:first-child div {
  z-index: 5;
}

.c47 > div:first-child > div:last-child {
  top: unset;
  bottom: unset;
  left: unset;
  right: unset;
  top: calc(100% + 5px);
  left: 0%;
}

.c47 > div:first-child > div:first-child {
  width: 100%;
  display: inline-grid;
  grid-template-columns: auto 30px auto;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  padding: 0.8rem;
  box-sizing: border-box;
  text-align: center;
  background-color: #ffffff;
  cursor: pointer;
}

.c47 > div:first-child > div:first-child * {
  background-color: #ffffff;
  cursor: pointer;
}

.c47 > div:first-child > div:first-child label {
  text-align: center;
  border: 0;
}

.c47 > div:first-child > div:first-child label input {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
  max-width: 90px;
  min-height: unset;
  padding: 0;
  color: #435465;
  background-clip: padding-box;
  box-sizing: border-box;
}

.c47 > div:first-child > div:first-child label input:disabled {
  cursor: not-allowed;
}

.c47 > div:first-child > div:first-child label input:focus {
  border-color: #012040;
  outline: 0;
}

.c47 > div:first-child > div:first-child label input::-webkit-input-placeholder {
  color: #98A7B7;
}

.c47 > div:first-child > div:first-child label input::-moz-placeholder {
  color: #98A7B7;
}

.c47 > div:first-child > div:first-child label input:-ms-input-placeholder {
  color: #98A7B7;
}

.c47 > div:first-child > div:first-child label input::placeholder {
  color: #98A7B7;
}

.c47 > div:first-child > div:first-child label input::-webkit-file-upload-button {
  visibility: hidden;
}

.c16 {
  width: 1px;
  opacity: 0;
}

.c15 {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c15:focus {
  border-color: #012040;
  outline: 0;
}

.c60 {
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c60 * {
  cursor: pointer;
}

.c60 .c11 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c60 .c11 > * {
  margin: 0;
  border: none;
  background-color: transparent;
}

.c60:focus-within {
  border-color: #012040;
}

.c64 {
  max-width: 24px;
  margin-right: 0.4rem;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c31 > :first-child {
  margin-bottom: 0.9rem;
}

.c32 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
}

.c32::after {
  color: red;
  content: ' *';
}

.c36 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c33 {
  display: grid;
  grid-template-columns: repeat(3,1fr);
}

.c40 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c38 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c38 ~ .c39 {
  border-color: #13181D;
}

.c38:checked ~ .c39 {
  border-width: calc(1.8rem / 3);
}

.c38:checked:disabled ~ .c39 {
  border-color: #dfe4e9;
}

.c38:not(:checked):disabled ~ .c39 {
  border-color: #98A7B7;
}

.c38:not(:disabled):checked ~ .c39,
.c38:not(:disabled):focus ~ .c39 {
  border-color: #005AEE;
}

.c37 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c35:hover.c34:hover .c39 {
  border-color: #1A6BF0;
}

.c72 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c72 > * + * {
  margin-left: 1.6rem;
}

.c1 {
  grid-column: 1/7;
}

.c1 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c9 {
  grid-column: 7/-1;
}

.c9 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c10 {
  grid-column: 1/-1;
}

.c10 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c68 {
  grid-column: 1/5;
}

.c68 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c69 {
  grid-column: 5/9;
}

.c69 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c70 {
  grid-column: 9/-1;
}

.c70 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c66 {
  grid-column: 1/-1;
  margin-top: 2.6rem;
}

.c67 {
  margin-bottom: 1rem;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: inline-grid;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="firstName-helper-text"
              class="c6"
              id="firstName-input"
              name="firstName"
              placeholder=" "
              required=""
              type="text"
              value="first name"
            />
            <label
              class="c7 c8"
              for="firstName-input"
              required=""
            >
              First Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="lastName-helper-text"
              class="c6"
              id="lastName-input"
              name="lastName"
              placeholder=" "
              required=""
              type="text"
              value="last name"
            />
            <label
              class="c7 c8"
              for="lastName-input"
              required=""
            >
              Last Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="email-helper-text"
              class="c6"
              id="email-input"
              name="email"
              placeholder=" "
              required=""
              type="email"
              value="email@email.com"
            />
            <label
              class="c7 c8"
              for="email-input"
              required=""
            >
              Email
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
        id="resume-field"
      >
        <label
          class="c13 c14"
          required=""
        >
          Resume
        </label>
        <label
          class="c15"
          id="resume-label"
        >
          Click to choose file
          <input
            class="c16"
            id="resume"
            name="resume"
            required=""
            type="file"
          />
        </label>
        <span
          class="c17 c18 c19"
        >
          File size should be less than 5MB
        </span>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c20"
        id="languages-wrapper"
      >
        <span
          class="c17 c21"
          id="languages-label"
        >
          Languages
        </span>
        
        <div
          class="c22"
          id="languages-field"
        >
          <label
            class="c23"
            for="languages-JAVA"
            id="languages-JAVA-wrapper"
          >
            <span
              class="c17 c18"
              id="languages-JAVA-label"
            >
              JAVA
            </span>
            <div
              class="c24 c25"
            >
              <input
                checked=""
                class="c26"
                id="languages-JAVA"
                name="java"
                type="checkbox"
              />
              <svg
                class="c27 c28"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </label>
          <label
            class="c29"
            for="languages-RUBY"
            id="languages-RUBY-wrapper"
          >
            <span
              class="c17 c18"
              id="languages-RUBY-label"
            >
              RUBY
            </span>
            <div
              class="c24 c30"
            >
              <input
                class="c26"
                id="languages-RUBY"
                name="ruby"
                type="checkbox"
              />
              <svg
                class="c27 c28"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        aria-describedby="role-helper-text"
        class="c31"
        id="role-wrapper"
        required=""
      >
        <span
          class="c17 c21 c32"
          id="role-label"
          required=""
          type="radio"
        >
          Role
        </span>
        <div
          class="c33"
          id="role-options"
        >
          <label
            class="c34 c35"
            id="Front End-role-wrapper"
            required=""
            sizes="[object Object]"
          >
            <span
              class="c17 c18 c36"
              id="Front End-role-label"
              type="radio"
            >
              Front End
            </span>
            <div
              class="c37"
            >
              <input
                checked=""
                class="c38"
                id="Front End-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="front-end"
              />
              <div
                class="c39 c40"
              />
            </div>
          </label>
          <label
            class="c34 c35"
            id="Back End-role-wrapper"
            required=""
            sizes="[object Object]"
          >
            <span
              class="c17 c18 c36"
              id="Back End-role-label"
              type="radio"
            >
              Back End
            </span>
            <div
              class="c37"
            >
              <input
                class="c38"
                id="Back End-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="back-end"
              />
              <div
                class="c39 c40"
              />
            </div>
          </label>
          <label
            class="c34 c35"
            id="Full Stack-role-wrapper"
            required=""
            sizes="[object Object]"
          >
            <span
              class="c17 c18 c36"
              id="Full Stack-role-label"
              type="radio"
            >
              Full Stack
            </span>
            <div
              class="c37"
            >
              <input
                class="c38"
                id="Full Stack-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="full-stack"
              />
              <div
                class="c39 c40"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
        id="birthDate"
      >
        <label
          class="c41 c14"
          for="birthDate"
        >
          Birth Date
        </label>
        <div
          class="c42"
          id="medly-popover-wrapper"
        >
          <div
            class="c11 c43"
            id="birthDate-input-field"
          >
            
            <div
              class="sc-fzoyAV c44"
            >
              <input
                autocomplete="off"
                class="c45 c46"
                id="birthDate-input"
                name="birthDate"
                placeholder="Birth Date"
                type="text"
                value="01/01/2019"
              />
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
      >
        <label
          class="c41 c14"
          for="Experience"
        >
          Experience
        </label>
        <div
          class="c47"
          data-testid="react-datepicker"
        >
          <div
            class="c48"
          >
            <div
              class="sc-fzpkqZ c49"
              data-testid="DateRangeInputGrid"
            >
              <label
                class="c50"
                display="block"
                for="startDate"
              >
                <input
                  aria-label="Start date"
                  autocomplete="off"
                  class="c51"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="startDate"
                  placeholder="Start date"
                  tabindex="0"
                  value="01/01/2019"
                  width="100%"
                />
              </label>
              <div
                class="c52"
              >
                <svg
                  class="c53"
                  height="12px"
                  transform="rotate(90 0 0)"
                  viewBox="0 0 9 12"
                  width="15px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.46.001a.538.538 0 0 0-.358.174L.156 4.48a.538.538 0 1 0 .796.724l3.01-3.285v13.689a.563.563 0 0 0 .538.55.563.563 0 0 0 .538-.55V1.918l3.01 3.286a.538.538 0 1 0 .796-.724L4.898.175a.538.538 0 0 0-.437-.174z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <label
                class="c50"
                display="block"
                for="endDate"
              >
                <input
                  aria-label="End date"
                  autocomplete="off"
                  class="c51"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="endDate"
                  placeholder="End date"
                  tabindex="0"
                  value="01/02/2019"
                  width="100%"
                />
              </label>
            </div>
            <div
              class="c54"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c55"
      >
        <div
          class="c2 c56"
        >
          <div
            class="c4"
          >
            <div
              class="c5"
            >
              <input
                aria-describedby="country-helper-text"
                autocomplete="off"
                class="c6"
                id="country-input"
                name="country"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value="India"
              />
              <label
                class="c7 c8"
                for="country-input"
                required=""
              >
                Country
              </label>
            </div>
            <svg
              class="c27 c28 c57 c58"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c11 c12"
        id="graduation-field"
      >
        <label
          class="c41 c14"
          for="graduation"
        >
          Graduation
        </label>
        <div
          class="c59"
          id="medly-popover-wrapper"
        >
          <div
            class="c60"
            id="graduation-container"
          >
            <button
              class="c61"
            >
              <span
                class="c17 c18"
              >
                BTech
              </span>
              <svg
                class="c27 c62"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
            <div
              class="c11 c43"
              id="graduation-input-field"
            >
              
              <div
                class="sc-fzoyAV c44"
              >
                <input
                  autocomplete="off"
                  class="c45"
                  id="graduation-input"
                  placeholder="1 options selected"
                  type="text"
                  value=""
                />
              </div>
              
            </div>
            <svg
              class="c27 c63 c64"
              fill="none"
              height="1em"
              theme="[object Object]"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.875 9l-3.88 3.88L8.115 9a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </div>
        </div>
        
      </div>
    </div>
    <h4
      class="c17 c65 c66"
    >
      Marks
    </h4>
    <span
      class="c17 c18 c67"
    >
      Marks Information
    </span>
    <div
      class="c68"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.database-helper-text"
              class="c6"
              id="marks.database-input"
              name="marks.database"
              placeholder="Database"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.database-input"
              required=""
            >
              Database
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c69"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.algorithms-helper-text"
              class="c6"
              id="marks.algorithms-input"
              name="marks.algorithms"
              placeholder="Algorithms"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.algorithms-input"
              required=""
            >
              Algorithms
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c70"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              aria-describedby="marks.maths-helper-text"
              class="c6"
              id="marks.maths-input"
              name="marks.maths"
              placeholder="Maths"
              required=""
              type="number"
              value="10"
            />
            <label
              class="c7 c8"
              for="marks.maths-input"
              required=""
            >
              Maths
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c10"
    >
      <label
        class="c71"
        for="agree"
        id="agree-wrapper"
      >
        <span
          class="c17 c18"
          id="agree-label"
        >
          Do you Agree
        </span>
        <div
          class="c24 c25"
        >
          <input
            checked=""
            class="c26"
            id="agree"
            name="agree"
            type="checkbox"
          />
          <svg
            class="c27 c28"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
              fill="green"
            />
          </svg>
        </div>
      </label>
    </div>
    <div
      class="c72"
    >
      <button
        class="c73"
        color="default"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c17 c21"
        >
          Submit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should render properly without initial state 1`] = `
.c30 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c30 * {
  fill-opacity: 1;
  fill: #607890;
}

.c61 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: pointer;
}

.c61 * {
  fill-opacity: 1;
  fill: #607890;
}

.c2 {
  margin: 0;
  color: inherit;
  font-size: 3.2rem;
  font-weight: 600;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  line-height: 4.0rem;
}

.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c20 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c23 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
}

.c63 {
  margin: 0;
  color: inherit;
  font-size: 1.8rem;
  font-weight: 700;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  line-height: 2.4rem;
}

.c71 {
  border: none;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  padding: 1rem 2.4rem 1.2rem 2.4rem;
  border-radius: 100rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c71 * {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c71:hover {
  cursor: pointer;
}

.c71:focus {
  outline: none;
}

.c71:disabled {
  cursor: not-allowed;
}

.c71:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c71:disabled .c29 * {
  fill: #dfe4e9;
}

.c71:not(:disabled) {
  color: #ffffff;
}

.c71:not(:disabled) .c29 * {
  fill: #ffffff;
}

.c71:not(:disabled):not(:hover) {
  background: #005AEE;
}

.c71:not(:disabled):hover {
  background: #1A6BF0;
  box-shadow: 0 0.4rem 0.8rem rgba(0,90,238,0.2);
}

.c71 .c29 + .c1 {
  margin-left: 0.8rem;
}

.c71 .c1 + .c29 {
  margin-left: 0.8rem;
}

.c16 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c16::after {
  color: red;
  content: ' *';
}

.c41 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0.8rem 0px 0px;
  cursor: default;
}

.c17 {
  grid-area: label;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c21 {
  grid-area: description;
  margin: 5px 0 0 2px;
  color: #012040;
}

.c15 {
  margin: 0.8rem 0.8rem 0.8rem 0;
  display: inline-grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: minmax(max-content,25%) minmax(auto,80%);
  grid-template-areas: 'label field' 'random description';
}

.c15 .sc-fzoyAV {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c43 {
  margin: 0.8rem 0;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-areas: 'label' 'field' 'description';
  grid-template-columns: auto;
  grid-template-areas: 'field' 'description';
}

.c43 .sc-fzoyAV {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c27 {
  margin: 0.3rem;
  position: relative;
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 22.2%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: transparent;
  border-color: #13181D;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c25 * {
  cursor: pointer;
}

.c25 .c1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c25 .c29 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c25:hover .c26 {
  border-color: #1A6BF0;
}

.c69 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c69 * {
  cursor: pointer;
}

.c69 .c1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #13181D;
  padding: 0 1.6rem;
}

.c69 .c29 {
  z-index: 1;
  pointer-events: none;
  position: absolute;
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.c69:hover .c26 {
  border-color: #1A6BF0;
}

.c28 {
  opacity: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  position: absolute;
}

.c28:focus {
  outline: none;
}

.c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c22 > :first-child {
  margin-bottom: 0.9rem;
}

.c22 > .c1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: #13181D;
}

.c24 {
  display: grid;
  grid-template-columns: repeat(1,1fr);
}

.c11 {
  top: 0;
  left: 0;
  cursor: text;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c11::after {
  content: ' *';
}

.c58 {
  pointer-events: none;
  margin-left: 1.6rem;
}

.c7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  padding: 0 1.6rem;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c7 .c10 {
  color: #566c82;
}

.c7 .sc-fzpmMD,
.c7 .c57 {
  color: #566c82;
}

.c7 .sc-fzpmMD *,
.c7 .c57 * {
  fill: #566c82;
}

.c7 ~ .sc-fzoNJl {
  color: #566c82;
}

.c7::after {
  content: '';
  width: 100%;
  height: 0.1rem;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #566c82;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c7:hover::after,
.c7:focus-within::after {
  height: 0.2rem;
}

.c7:focus-within,
.c7:focus-within:hover {
  border-color: #005AEE;
  background-color: #e6effd;
}

.c7:focus-within::after,
.c7:focus-within:hover::after {
  background-color: #005AEE;
}

.c7:focus-within .c10,
.c7:focus-within:hover .c10 {
  color: #005AEE;
}

.c7:focus-within .sc-fzpmMD,
.c7:focus-within:hover .sc-fzpmMD,
.c7:focus-within .c57,
.c7:focus-within:hover .c57 {
  color: #005AEE;
}

.c7:focus-within .sc-fzpmMD *,
.c7:focus-within:hover .sc-fzpmMD *,
.c7:focus-within .c57 *,
.c7:focus-within:hover .c57 * {
  fill: #005AEE;
}

.c7:focus-within input::-webkit-input-placeholder,
.c7:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input::-moz-placeholder,
.c7:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input:-ms-input-placeholder,
.c7:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c7:focus-within input::placeholder,
.c7:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c6 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  min-width: 20rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c56 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c9 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c9:focus {
  outline: none;
}

.c9:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c9:focus::-moz-placeholder {
  opacity: 1;
}

.c9:focus:-ms-input-placeholder {
  opacity: 1;
}

.c9:focus::placeholder {
  opacity: 1;
}

.c9::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c9:not(:placeholder-shown) + .c10,
.c9:focus + .c10 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c55 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c55 .c5 {
  margin: 0;
  caret-color: transparent;
}

.c55 .c5 label {
  pointer-events: none;
}

.c55 .c5 div,
.c55 .c5 input,
.c55 .c5 label {
  cursor: pointer;
}

.c55 .c5 .c57 {
  -webkit-transition: -webkit-transform 200ms ease-out;
  -webkit-transition: transform 200ms ease-out;
  transition: transform 200ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c55 .c5 .c57 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
}

.c55 .c5:not(:focus-within):hover .c57 * {
  fill: #13181D;
}

.c42 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c42 .sc-fzoYkl {
  top: calc(100% + 5px);
  left: 0%;
}

.c59 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c59 .sc-fzoYkl {
  top: calc(100% + 5px);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c44 {
  grid-area: field;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-clip: padding-box;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  overflow: hidden;
  width: 100%;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
}

.c44.c44.c44 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c44:focus-within {
  border-color: #012040;
}

.c44 > * {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
}

.c45 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  outline: 0;
  border: 0;
  width: calc(100% - 16px);
  cursor: inherit;
  background-color: #ffffff;
}

.c45::-webkit-input-placeholder {
  color: #98A7B7;
}

.c45::-moz-placeholder {
  color: #98A7B7;
}

.c45:-ms-input-placeholder {
  color: #98A7B7;
}

.c45::placeholder {
  color: #98A7B7;
}

.c45::-webkit-file-upload-button {
  visibility: hidden;
}

.c46 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
}

.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c54 {
  box-sizing: border-box;
  position: absolute;
  bottom: unset;
  left: 0;
  top: unset;
  right: unset;
}

.c50 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c51 {
  border: 0;
  padding: 0 44px;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c51::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c51::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c51:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c48 {
  box-sizing: border-box;
  position: relative;
}

.c53 {
  color: #BCBEC0;
  opacity: 1;
}

.c49 {
  display: grid;
  grid-template-columns: 194px 39px 194px;
  grid-template-rows: unset;
  background: transparent;
  border: 0;
  border-radius: 0;
}

.c47 > div:first-child div {
  z-index: 5;
}

.c47 > div:first-child > div:last-child {
  top: unset;
  bottom: unset;
  left: unset;
  right: unset;
  top: calc(100% + 5px);
  left: 0%;
}

.c47 > div:first-child > div:first-child {
  width: 100%;
  display: inline-grid;
  grid-template-columns: auto 30px auto;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  padding: 0.8rem;
  box-sizing: border-box;
  text-align: center;
  background-color: #ffffff;
  cursor: pointer;
}

.c47 > div:first-child > div:first-child * {
  background-color: #ffffff;
  cursor: pointer;
}

.c47 > div:first-child > div:first-child label {
  text-align: center;
  border: 0;
}

.c47 > div:first-child > div:first-child label input {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: center;
  max-width: 90px;
  min-height: unset;
  padding: 0;
  color: #435465;
  background-clip: padding-box;
  box-sizing: border-box;
}

.c47 > div:first-child > div:first-child label input:disabled {
  cursor: not-allowed;
}

.c47 > div:first-child > div:first-child label input:focus {
  border-color: #012040;
  outline: 0;
}

.c47 > div:first-child > div:first-child label input::-webkit-input-placeholder {
  color: #98A7B7;
}

.c47 > div:first-child > div:first-child label input::-moz-placeholder {
  color: #98A7B7;
}

.c47 > div:first-child > div:first-child label input:-ms-input-placeholder {
  color: #98A7B7;
}

.c47 > div:first-child > div:first-child label input::placeholder {
  color: #98A7B7;
}

.c47 > div:first-child > div:first-child label input::-webkit-file-upload-button {
  visibility: hidden;
}

.c19 {
  width: 1px;
  opacity: 0;
}

.c18 {
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  padding: 0.8rem;
  color: #435465;
  background-clip: padding-box;
  background-color: #ffffff;
  box-sizing: border-box;
  border: 1px solid #b0bcc8;
  border-radius: 5px;
  cursor: pointer;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18:focus {
  border-color: #012040;
  outline: 0;
}

.c60 {
  border: 1px solid #C7D0D8;
  background-color: #ffffff;
  cursor: pointer;
  border-radius: 4px;
  box-sizing: border-box;
  overflow: hidden;
  min-width: 150px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c60 * {
  cursor: pointer;
}

.c60 .c14 {
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c60 .c14 > * {
  margin: 0;
  border: none;
  background-color: transparent;
}

.c60:focus-within {
  border-color: #012040;
}

.c62 {
  max-width: 24px;
  margin-right: 0.4rem;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c31 > :first-child {
  margin-bottom: 0.9rem;
}

.c32 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
}

.c32::after {
  color: red;
  content: ' *';
}

.c36 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c33 {
  display: grid;
  grid-template-columns: repeat(3,1fr);
}

.c40 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c38 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c38 ~ .c39 {
  border-color: #13181D;
}

.c38:checked ~ .c39 {
  border-width: calc(1.8rem / 3);
}

.c38:checked:disabled ~ .c39 {
  border-color: #dfe4e9;
}

.c38:not(:checked):disabled ~ .c39 {
  border-color: #98A7B7;
}

.c38:not(:disabled):checked ~ .c39,
.c38:not(:disabled):focus ~ .c39 {
  border-color: #005AEE;
}

.c37 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
}

.c35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c35:hover.c34:hover .c39 {
  border-color: #1A6BF0;
}

.c70 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-column: 1/-1;
  margin-top: 1.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c70 > * + * {
  margin-left: 1.6rem;
}

.c4 {
  grid-column: 1/7;
}

.c4 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c12 {
  grid-column: 7/-1;
}

.c12 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c13 {
  grid-column: 1/-1;
}

.c13 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c66 {
  grid-column: 1/5;
}

.c66 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c67 {
  grid-column: 5/9;
}

.c67 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c68 {
  grid-column: 9/-1;
}

.c68 > * {
  width: 100%;
  margin: 0;
  min-width: auto;
}

.c64 {
  grid-column: 1/-1;
  margin-top: 2.6rem;
}

.c65 {
  margin-bottom: 1rem;
}

.c0 {
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  grid-gap: 1.6rem;
  display: grid;
  width: 100%;
  min-width: 300px;
}

.c0 > h2 {
  grid-column: 1/-1;
  margin-bottom: 0.8rem;
}

.c0 > span {
  grid-column: 1/-1;
  margin-bottom: 1rem;
}

<div>
  <form
    class="c0"
    id="medly-dynamic-form"
  >
    <h2
      class="c1 c2"
    >
      Dummy Form
    </h2>
    <span
      class="c1 c3"
    >
      Dummy Description
    </span>
    <div
      class="c4"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="firstName-helper-text"
              class="c9"
              id="firstName-input"
              name="firstName"
              placeholder=" "
              required=""
              type="text"
              value=""
            />
            <label
              class="c10 c11"
              for="firstName-input"
              required=""
            >
              First Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c12"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="lastName-helper-text"
              class="c9"
              id="lastName-input"
              name="lastName"
              placeholder=" "
              required=""
              type="text"
              value=""
            />
            <label
              class="c10 c11"
              for="lastName-input"
              required=""
            >
              Last Name
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="email-helper-text"
              class="c9"
              id="email-input"
              name="email"
              placeholder=" "
              required=""
              type="email"
              value=""
            />
            <label
              class="c10 c11"
              for="email-input"
              required=""
            >
              Email
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
        id="resume-field"
      >
        <label
          class="c16 c17"
          required=""
        >
          Resume
        </label>
        <label
          class="c18"
          id="resume-label"
        >
          Click to choose file
          <input
            class="c19"
            id="resume"
            name="resume"
            required=""
            type="file"
          />
        </label>
        <span
          class="c1 c20 c21"
        >
          File size should be less than 5MB
        </span>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c22"
        id="languages-wrapper"
      >
        <span
          class="c1 c23"
          id="languages-label"
        >
          Languages
        </span>
        
        <div
          class="c24"
          id="languages-field"
        >
          <label
            class="c25"
            for="languages-JAVA"
            id="languages-JAVA-wrapper"
          >
            <span
              class="c1 c20"
              id="languages-JAVA-label"
            >
              JAVA
            </span>
            <div
              class="c26 c27"
            >
              <input
                class="c28"
                id="languages-JAVA"
                name="java"
                type="checkbox"
              />
              <svg
                class="c29 c30"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </label>
          <label
            class="c25"
            for="languages-RUBY"
            id="languages-RUBY-wrapper"
          >
            <span
              class="c1 c20"
              id="languages-RUBY-label"
            >
              RUBY
            </span>
            <div
              class="c26 c27"
            >
              <input
                class="c28"
                id="languages-RUBY"
                name="ruby"
                type="checkbox"
              />
              <svg
                class="c29 c30"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        aria-describedby="role-helper-text"
        class="c31"
        id="role-wrapper"
        required=""
      >
        <span
          class="c1 c23 c32"
          id="role-label"
          required=""
          type="radio"
        >
          Role
        </span>
        <div
          class="c33"
          id="role-options"
        >
          <label
            class="c34 c35"
            id="Front End-role-wrapper"
            required=""
            sizes="[object Object]"
          >
            <span
              class="c1 c20 c36"
              id="Front End-role-label"
              type="radio"
            >
              Front End
            </span>
            <div
              class="c37"
            >
              <input
                class="c38"
                id="Front End-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="front-end"
              />
              <div
                class="c39 c40"
              />
            </div>
          </label>
          <label
            class="c34 c35"
            id="Back End-role-wrapper"
            required=""
            sizes="[object Object]"
          >
            <span
              class="c1 c20 c36"
              id="Back End-role-label"
              type="radio"
            >
              Back End
            </span>
            <div
              class="c37"
            >
              <input
                class="c38"
                id="Back End-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="back-end"
              />
              <div
                class="c39 c40"
              />
            </div>
          </label>
          <label
            class="c34 c35"
            id="Full Stack-role-wrapper"
            required=""
            sizes="[object Object]"
          >
            <span
              class="c1 c20 c36"
              id="Full Stack-role-label"
              type="radio"
            >
              Full Stack
            </span>
            <div
              class="c37"
            >
              <input
                class="c38"
                id="Full Stack-role"
                name="role"
                required=""
                sizes="[object Object]"
                type="radio"
                value="full-stack"
              />
              <div
                class="c39 c40"
              />
            </div>
          </label>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
        id="birthDate"
      >
        <label
          class="c41 c17"
          for="birthDate"
        >
          Birth Date
        </label>
        <div
          class="c42"
          id="medly-popover-wrapper"
        >
          <div
            class="c14 c43"
            id="birthDate-input-field"
          >
            
            <div
              class="sc-fzoyAV c44"
            >
              <input
                autocomplete="off"
                class="c45 c46"
                id="birthDate-input"
                name="birthDate"
                placeholder="Birth Date"
                type="text"
                value=""
              />
            </div>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
      >
        <label
          class="c41 c17"
          for="Experience"
        >
          Experience
        </label>
        <div
          class="c47"
          data-testid="react-datepicker"
        >
          <div
            class="c48"
          >
            <div
              class="sc-fzpkqZ c49"
              data-testid="DateRangeInputGrid"
            >
              <label
                class="c50"
                display="block"
                for="startDate"
              >
                <input
                  aria-label="Start date"
                  autocomplete="off"
                  class="c51"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="startDate"
                  placeholder="Start date"
                  tabindex="0"
                  value=""
                  width="100%"
                />
              </label>
              <div
                class="c52"
              >
                <svg
                  class="c53"
                  height="12px"
                  transform="rotate(90 0 0)"
                  viewBox="0 0 9 12"
                  width="15px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.46.001a.538.538 0 0 0-.358.174L.156 4.48a.538.538 0 1 0 .796.724l3.01-3.285v13.689a.563.563 0 0 0 .538.55.563.563 0 0 0 .538-.55V1.918l3.01 3.286a.538.538 0 1 0 .796-.724L4.898.175a.538.538 0 0 0-.437-.174z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <label
                class="c50"
                display="block"
                for="endDate"
              >
                <input
                  aria-label="End date"
                  autocomplete="off"
                  class="c51"
                  color="#001217"
                  data-testid="DatepickerInput"
                  font-family="Montserrat, sans-serif"
                  font-size="14px"
                  font-weight="600"
                  id="endDate"
                  placeholder="End date"
                  tabindex="0"
                  value=""
                  width="100%"
                />
              </label>
            </div>
            <div
              class="c54"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c55"
      >
        <div
          class="c5 c56"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <input
                aria-describedby="country-helper-text"
                autocomplete="off"
                class="c9"
                id="country-input"
                name="country"
                placeholder="Please Select . . ."
                required=""
                type="text"
                value=""
              />
              <label
                class="c10 c11"
                for="country-input"
                required=""
              >
                Country
              </label>
            </div>
            <svg
              class="c29 c30 c57 c58"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
                fill="#000"
              />
            </svg>
          </div>
          
        </div>
      </div>
    </div>
    <div
      class="c13"
    >
      <div
        class="c14 c15"
        id="graduation-field"
      >
        <label
          class="c41 c17"
          for="graduation"
        >
          Graduation
        </label>
        <div
          class="c59"
          id="medly-popover-wrapper"
        >
          <div
            class="c60"
            id="graduation-container"
          >
            <div
              class="c14 c43"
              id="graduation-input-field"
            >
              
              <div
                class="sc-fzoyAV c44"
              >
                <input
                  autocomplete="off"
                  class="c45"
                  id="graduation-input"
                  placeholder="Please Select . . ."
                  type="text"
                  value=""
                />
              </div>
              
            </div>
            <svg
              class="c29 c61 c62"
              fill="none"
              height="1em"
              theme="[object Object]"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.875 9l-3.88 3.88L8.115 9a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </div>
        </div>
        
      </div>
    </div>
    <h4
      class="c1 c63 c64"
    >
      Marks
    </h4>
    <span
      class="c1 c20 c65"
    >
      Marks Information
    </span>
    <div
      class="c66"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.database-helper-text"
              class="c9"
              id="marks.database-input"
              name="marks.database"
              placeholder="Database"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.database-input"
              required=""
            >
              Database
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c67"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.algorithms-helper-text"
              class="c9"
              id="marks.algorithms-input"
              name="marks.algorithms"
              placeholder="Algorithms"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.algorithms-input"
              required=""
            >
              Algorithms
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c68"
    >
      <div
        class="c5 c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <input
              aria-describedby="marks.maths-helper-text"
              class="c9"
              id="marks.maths-input"
              name="marks.maths"
              placeholder="Maths"
              required=""
              type="number"
              value=""
            />
            <label
              class="c10 c11"
              for="marks.maths-input"
              required=""
            >
              Maths
            </label>
          </div>
        </div>
        
      </div>
    </div>
    <div
      class="c13"
    >
      <label
        class="c69"
        for="agree"
        id="agree-wrapper"
      >
        <span
          class="c1 c20"
          id="agree-label"
        >
          Do you Agree
        </span>
        <div
          class="c26 c27"
        >
          <input
            class="c28"
            id="agree"
            name="agree"
            type="checkbox"
          />
          <svg
            class="c29 c30"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
              fill="green"
            />
          </svg>
        </div>
      </label>
    </div>
    <div
      class="c70"
    >
      <button
        class="c71"
        color="default"
        form="medly-dynamic-form"
        type="submit"
      >
        <span
          class="c1 c23"
        >
          Upload
        </span>
      </button>
    </div>
  </form>
</div>
`;
